{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 18,
  "lineage": "d0490b0f-5b66-2d73-a93b-1ea3dcca6060",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:vpc/vpc-81af5ce8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-371be95e",
            "default_route_table_id": "rtb-f8758791",
            "default_security_group_id": "sg-ee428e87",
            "dhcp_options_id": "dopt-01dd2f68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-81af5ce8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-f8758791",
            "owner_id": "755233231675",
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "provisioner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f869ae259b6bc98",
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:instance/i-0d17fef08abe2d720",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d17fef08abe2d720",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ezcmc1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8c742cebca0f15d",
            "private_dns": "ip-172-31-18-218.ap-northeast-2.compute.internal",
            "private_ip": "172.31.18.218",
            "public_dns": "ec2-3-39-187-254.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.187.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007ae4579392f4513",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-provisioner-userdata"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f2cf49",
            "tags": {
              "Name": "fastcampus-provisioner"
            },
            "tags_all": {
              "Name": "fastcampus-provisioner"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0598881e12f9513a0"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "userdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f869ae259b6bc98",
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:instance/i-0046c04fcea0c2ac2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0046c04fcea0c2ac2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ezcmc1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8b2c5304c53e32c",
            "private_dns": "ip-172-31-29-69.ap-northeast-2.compute.internal",
            "private_ip": "172.31.29.69",
            "public_dns": "ec2-3-39-233-23.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.233.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00dc8eb74f7a49f38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-provisioner-userdata"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f2cf49",
            "tags": {
              "Name": "fastcampus-userdata"
            },
            "tags_all": {
              "Name": "fastcampus-userdata"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0598881e12f9513a0"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:security-group/sg-0598881e12f9513a0",
            "description": "Security Group for test.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to communicate to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0598881e12f9513a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-provisioner-userdata",
            "name_prefix": "",
            "owner_id": "755233231675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-provisioner-userdata",
              "Project": "provisioner-userdata",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "default-provisioner-userdata",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "default-provisioner-userdata",
              "Project": "provisioner-userdata",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "default-provisioner-userdata",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-81af5ce8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-2448006223",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0598881e12f9513a0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP from anywhere.",
            "from_port": 80,
            "id": "sgrule-4265331928",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0598881e12f9513a0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.security_group.aws_security_group.this"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere.",
            "from_port": 22,
            "id": "sgrule-1219596653",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0598881e12f9513a0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}